--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ set -g history-limit 50000
 # Set terminal 256color
 set -g default-terminal "screen-256color"
 
-# -- display
+# display
 set -g base-index 1
 setw -g pane-base-index 1
 setw -g automatic-rename on
@@ -21,7 +21,6 @@ set -g renumber-windows on
 set -g set-titles on
 set -g display-panes-time 2000
 set -g display-time 2000
-set -g status-interval 1
 
 # Bind second prefix key
 set-option -g prefix2 C-a
@@ -105,6 +104,15 @@ bind -n M-& join-pane -t :7
 bind -n M-* join-pane -t :8
 bind -n M-( join-pane -t :9
 
+# pane resizing
+bind -r C-h resize-pane -L 3
+bind -r C-j resize-pane -D 3
+bind -r C-k resize-pane -U 3
+bind -r C-l resize-pane -R 3
+
+# kill pane
+bind X kill-pane
+
 # copy mode-keys
 bind -n M-v copy-mode
 
@@ -112,10 +120,34 @@ bind b list-buffers
 bind p paste-buffer
 
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'erikw/tmux-powerline'
+# toggle_syn_input
+bind C-g if-shell '[[ $(tmux showw synchronize-panes | cut -d\  -f2) == "on" ]]' \
+'setw synchronize-panes off; set -g pane-border-style fg=magenta' \
+'setw synchronize-panes on; set -g pane-border-style fg=red'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+# -- toggle_status
+bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
+'set -g status off' \
+'set -g status on'
+
+# panes
+setw -g pane-border-format '#[bold]#{?#{&&:#{pane_active},#{client_prefix}},#[underscore],}\
+#{?pane_active,❐ #S:#I/#{session_windows} ,}#{?window_zoomed_flag,⬢,❄} #P ⇒ #{pane_tty} #{pane_current_command}'
+set -g pane-active-border-style fg=brightblue
+set -g pane-border-style fg=magenta
+
+# status settings
+set -g status-justify 'centre'
+set -g status-interval 1
+set -g status-bg default
+setw -g window-status-separator ''
+setw -g window-status-format '#[fg=#87CEFA] #I #W'
+setw -g window-status-current-format '#[fg=#00BFFF,bold] #I #W'
+
+set -g status-left-length 50
+set -g status-left-style default
+set -g status-left "#[fg=cyan,bright]#(uname -r | cut -c 1-7)#[fg=black]•#[fg=cyan]#H#[fg=black]•#[fg=cyan,bright]#(whoami) #[fg=brightgreen][#S-#{window_index}-#{pane_index}]"
+
+set -g status-right-length 140
+set -g status-right-style default
+set -g status-right "#{?pane_in_mode,#[bg=yellow] Copy Mode #[default],}#[fg=brightcyan,bright]#{pane_current_path} #[fg=green]%y-%b-%d"
