--- a/tmux.conf
+++ b/tmux.conf
@@ -139,7 +139,7 @@ set -g pane-border-style fg=magenta
 # status settings
 set -g status-justify 'centre'
 set -g status-interval 1
-set -g status-bg default
+set -g status-bg "#36648B"
 setw -g window-status-separator ''
 setw -g window-status-format '#[fg=#87CEFA] #I #W'
 setw -g window-status-current-format '#[fg=#00BFFF,bold] #I #W'
