config status bar and display true color

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,8 @@ setw -g status-keys vi
 set -g history-limit 50000
 
 # Set terminal 256color
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",*256col*:Tc"
 
 # display
 set -g base-index 1
@@ -130,24 +131,18 @@ bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 'set -g status off' \
 'set -g status on'
 
-# panes
-setw -g pane-border-format '#[bold]#{?#{&&:#{pane_active},#{client_prefix}},#[underscore],}\
-#{?pane_active,❐ #S:#I/#{session_windows} ,}#{?window_zoomed_flag,⬢,❄} #P ⇒ #{pane_tty} #{pane_current_command}'
-set -g pane-active-border-style fg=brightblue
-set -g pane-border-style fg=magenta
-
 # status settings
 set -g status-justify 'centre'
 set -g status-interval 1
-set -g status-bg "#36648B"
+set -g status-bg "#292e42"
 setw -g window-status-separator ''
 setw -g window-status-format '#[fg=#87CEFA] #I #W'
 setw -g window-status-current-format '#[fg=#00BFFF,bold] #I #W'
 
 set -g status-left-length 50
 set -g status-left-style default
-set -g status-left "#[fg=cyan,bright]#(uname -r | cut -c 1-7)#[fg=black]•#[fg=cyan]#H#[fg=black]•#[fg=cyan,bright]#(whoami) #[fg=brightgreen][#S-#{window_index}-#{pane_index}]"
+set -g status-left "#[fg=#ff8787][#S-#{window_index}-#{pane_index}] #[fg=#87d7ff,bright]#{pane_current_path} #{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
 
 set -g status-right-length 140
 set -g status-right-style default
-set -g status-right "#{?pane_in_mode,#[bg=yellow] Copy Mode #[default],}#[fg=brightcyan,bright]#{pane_current_path} #[fg=green]%y-%b-%d"
+set -g status-right "#[fg=#d7af5f,bright]#(uname -r | cut -c 1-7)  #[fg=#ff8787]#H  #[fg=#87d7ff,bright]#(whoami)  #[fg=#afd75f]%y-%b-%d"
