--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # cat << EOF > /dev/null
-
+background="#282828"
+bg="#303030"
 # Eable mouse operation
 set-option -g mouse on
 
@@ -130,19 +131,64 @@ bind C-g if-shell '[[ $(tmux showw synchronize-panes | cut -d\  -f2) == "on" ]]'
 bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 'set -g status off' \
 'set -g status on'
+setw -g monitor-activity on
+set -g visual-activity off
+set -g set-titles on                        # set terminal title
+set -g set-titles-string '#h ❐ #S ● #I #W'
+
+# ==========================
+# ===    Colorscheme     ===
+# =========================,bg==
+set -g message-style fg=colour222,bg=colour238
+set -g message-command-style fg=colour222,bg=colour238
+
+set-option -g status-style                 fg=colour15,bg="#282828"
+set-option -g pane-border-style            fg=green,bg="#282828"
+set-option -g pane-active-border-style     fg=yellow,bg="#282828"
+set-option -g window-status-activity-style fg=colour111
+
+# =====================================
+# ===    Appearence and status bar  ===
+# ======================================
+set -g status-interval 2
+set-option -g status-fg default
+
+set -g status on
+set -g status-justify left
+set -g status-position bottom
+
+set -g status-left-length 80
+set -g status-right-length 80
+
+set-option -g status-left ""
+# prefix
+prefix="#{?client_prefix,🐠,}"
+
+# Window status
+inactive='#222829'
+grey='#74787a'
+yellow='#f2c867'
+teal='#37ad88'
+green='#afd787'
+
+set-window-option -g window-status-separator ''
+set -g status-right "$prefix #[fg=$bg]#[bg=$bg,fg=blue]  #[fg=blue,bg=$bg]#S "
+set -g status-left "#[bg=$bg,fg=blue]  #[fg=blue,bg=$bg] #{s|$HOME|󱗾|;s|/.*/|/…/|:pane_current_path} #[fg=$bg,bg="#282828"]#[default]"
+set-option -g window-status-format "#[fg=$bg]#[bg=$bg,fg=$grey]󱫪 #[fg=$grey,bg=$bg]#W #[fg=$bg,bg="#282828"]"
+set-option -g window-status-current-format "#[fg=$bg]#[fg=$yellow,bg=$bg] #[fg=$green,bg=$bg]#W #[fg=$bg,bg="#282828"]"
 
 # status settings
-set -g status-justify 'centre'
-set -g status-interval 1
-set -g status-bg "#292e42"
-setw -g window-status-separator ''
-setw -g window-status-format '#[fg=#87CEFA] #I #W'
-setw -g window-status-current-format '#[fg=#00BFFF,bold] #I #W'
-
-set -g status-left-length 50
-set -g status-left-style default
-set -g status-left "#[fg=#ff8787][#S-#{window_index}-#{pane_index}] #[fg=#87d7ff,bright]#{pane_current_path} #{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
-
-set -g status-right-length 140
-set -g status-right-style default
-set -g status-right "#[fg=#d7af5f,bright]#(uname -r | cut -c 1-7)  #[fg=#ff8787]#H  #[fg=#87d7ff,bright]#(whoami)  #[fg=#afd75f]%y-%b-%d"
+# set -g status-justify 'centre'
+# set -g status-interval  
+# set -g status-bg "#292e42"
+# setw -g window-status-separator ''
+# setw -g window-status-format '#[fg=#87CEFA] #I #W'
+# setw -g window-status-current-format '#[fg=#00BFFF,bold] #I #W'
+#
+# set -g status-left-length 50
+# set -g status-left-style default
+# set -g status-left "#[fg=#ff8787][#S-#{window_index}-#{pane_index}] #[fg=#87d7ff,bright]#{pane_current_path} #{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
+#
+# set -g status-right-length 140
+# set -g status-right-style default
+# set -g status-right "#[fg=#d7af5f,bright]#(uname -r | cut -c 1-7)  #[fg=#ff8787]#H  #[fg=#87d7ff,bright]#(whoami)  #[fg=#afd75f]%y-%b-%d"
