--- a/tmux.conf
+++ b/tmux.conf
@@ -23,8 +23,6 @@ set -g display-panes-time 2000
 set -g display-time 2000
 setw -g monitor-activity on
 set -g visual-activity off
-set -g set-titles on
-set -g set-titles-string '#h ❐ #S ● #I #W'
 
 # Bind second prefix key
 set-option -g prefix2 C-a
@@ -154,7 +152,7 @@ mode="#{?pane_in_mode,#[fg=#afd75f]#[bg=default]#[bg=#afd75f]#[fg=#262626] Co
 user="#[fg=$bg]#[bg=$bg,fg=cyan]  #(whoami) "
 
 set-window-option -g window-status-separator ''
-set -g status-right "$mode #[fg=$bg]#[bg=$bg,fg=#2ac3de]  #S-#I-#P #[fg=$bg]#[bg=default]$user"
+set -g status-right "$mode #[fg=$bg]#[bg=$bg,fg=#2ac3de]  #S-#I-#P #[fg=$bg]#[bg=default]$user"
 set -g status-left "#[bg=$bg]#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} #[fg=$bg]#[bg=default] $prefix"
 set-option -g window-status-format "#[fg=$bg]#[bg=default]#[bg=$bg]#[fg=#74787a] 󱫪 #W #[fg=$bg]#[bg=default]"
 set-option -g window-status-current-format "#[fg=$bg]#[bg=default]#[fg=#f2c867]#[bg=$bg]  #[fg=#afd787]#[bg=$bg]#W #[fg=$bg]#[bg=default]"
