--- a/tmux.conf
+++ b/tmux.conf
@@ -154,5 +154,5 @@ user="#[fg=$bg]#[bg=$bg,fg=cyan]  #(whoami) "
 set-window-option -g window-status-separator ''
 set -g status-right "$mode #[fg=$bg]#[bg=$bg,fg=#2ac3de]  #S-#I-#P #[fg=$bg]#[bg=default]$user"
 set -g status-left "#[bg=$bg]#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} #[fg=$bg]#[bg=default] $prefix"
-set-option -g window-status-format "#[fg=$bg]#[bg=default]#[bg=$bg]#[fg=#74787a] 󱫪 #W #[fg=$bg]#[bg=default]"
-set-option -g window-status-current-format "#[fg=$bg]#[bg=default]#[fg=#f2c867]#[bg=$bg]  #[fg=#afd787]#[bg=$bg]#W #[fg=$bg]#[bg=default]"
+set-option -g window-status-format "#[fg=$bg]#[bg=$bg]#[fg=#74787a] 󱫪 #W #[fg=$bg]#[bg=default]"
+set-option -g window-status-current-format "#[fg=$bg]#[fg=#f2c867]#[bg=$bg]  #[fg=#afd787]#[bg=$bg]#W #[fg=$bg]#[bg=default]"
