use status-style to set bg color

--- a/tmux.conf
+++ b/tmux.conf
@@ -136,7 +136,7 @@ bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 # ===    Appearence and status bar  ===
 # ======================================
 set -g status-interval 2
-set -g status-bg default
+set -g status-style "bg=default"
 
 set -g status on
 set -g status-justify centre
