simple display status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -136,7 +136,7 @@ bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 # ===    Appearence and status bar  ===
 # ======================================
 set -g status-interval 2
-set -g status-style "bg=default"
+set -g status-style "bg=#292e42"
 
 set -g status on
 set -g status-justify centre
@@ -145,14 +145,12 @@ set -g status-position bottom
 set -g status-left-length 80
 set -g status-right-length 80
 
-bg="#303030"
-
 prefix="#{?client_prefix,🐠,}"
-mode="#{?pane_in_mode,#[fg=#afd75f]#[bg=default]#[bg=#afd75f]#[fg=#262626] Copy Mode #[fg=#afd75f]#[bg=default]#[default],}"
-user="#[fg=$bg]#[bg=$bg,fg=cyan]  #(whoami) "
+mode="#{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
+user="#[fg=cyan]  #(whoami) "
 
 set-window-option -g window-status-separator ''
-set -g status-right "$mode #[fg=$bg]#[bg=$bg,fg=#2ac3de]  #S-#I-#P #[fg=$bg]#[bg=default]$user"
-set -g status-left "#[bg=$bg]#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} #[fg=$bg]#[bg=default] $prefix"
-set-option -g window-status-format "#[fg=$bg]#[bg=$bg]#[fg=#74787a] 󱫪 #W #[fg=$bg]#[bg=default]"
-set-option -g window-status-current-format "#[fg=$bg]#[fg=#f2c867]#[bg=$bg]  #[fg=#afd787]#[bg=$bg]#W #[fg=$bg]#[bg=default]"
+set -g status-right "$mode #[fg=#2ac3de]  #S-#I-#P $user"
+set -g status-left "#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} $prefix"
+set-option -g window-status-format "#[fg=#74787a] 󱫪 #W "
+set-option -g window-status-current-format "#[fg=#f2c867]  #[fg=#afd787]#W "
