--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,3 @@
-# cat << EOF > /dev/null
-
 # Eable mouse operation
 set-option -g mouse on
 
@@ -139,7 +137,7 @@ set -g status-interval 2
 set -g status-style "bg=#292e42"
 
 set -g status on
-set -g status-justify centre
+set -g status-justify left
 set -g status-position bottom
 
 set -g status-left-length 80
@@ -150,7 +148,8 @@ mode="#{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
 user="#[fg=cyan]  #(whoami) "
 
 set-window-option -g window-status-separator ''
-set -g status-right "$mode #[fg=#2ac3de]  #S-#I-#P $user"
-set -g status-left "#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} $prefix"
+set -g status-right "$prefix $mode #[fg=#2ac3de]  #S-#I-#P $user"
+set -g status-left ""
+# set -g status-left "#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} $prefix"
 set-option -g window-status-format "#[fg=#74787a] 󱫪 #W "
 set-option -g window-status-current-format "#[fg=#f2c867]  #[fg=#afd787]#W "
