set prefix2 to C-x

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ setw -g monitor-activity on
 set -g visual-activity off
 
 # Bind second prefix key
-set-option -g prefix2 C-a
+set-option -g prefix2 C-x
 
 # Open new window in current path
 bind c new-window -c "#{pane_current_path}"
