--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+set-option -sg escape-time 10
 # Eable mouse operation
 set-option -g mouse on
 
@@ -27,7 +28,6 @@ set-option -g prefix2 C-x
 
 # Open new window in current path
 bind c new-window -c "#{pane_current_path}"
-
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
