--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ setw -g status-keys vi
 set -g history-limit 50000
 
 # Set terminal 256color
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",*256col*:Tc"
 
 # display
