set statusline to top

--- a/tmux.conf
+++ b/tmux.conf
@@ -135,11 +135,13 @@ bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 # ===    Appearence and status bar  ===
 # ======================================
 set -g status-interval 2
-set -g status-style "bg=#292e42"
+# set -g status-style "bg=#292e42"
+set -g status-style "bg=default"
 
 set -g status on
 set -g status-justify left
-set -g status-position bottom
+# set -g status-position bottom
+set -g status-position top
 
 set -g status-left-length 80
 set -g status-right-length 80
