--- a/tmux.conf
+++ b/tmux.conf
@@ -31,7 +31,7 @@ set-option -g prefix2 C-x
 bind c new-window -c "#{pane_current_path}"
 
 # reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
 
 # create session
 bind C-c new-session
@@ -134,32 +134,33 @@ bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 # =====================================
 # ===    Appearence and status bar  ===
 # ======================================
-# set -g status-interval 2
-# # set -g status-style "bg=#292e42"
-# set -g status-style "bg=default"
-#
-# set -g status on
-# set -g status-justify left
-# # set -g status-position bottom
-# set -g status-position top
-#
-# set -g status-left-length 80
-# set -g status-right-length 80
-#
-# prefix="#{?client_prefix,🐠,}"
-# mode="#{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
-# user="#[fg=cyan]  #(whoami) "
-#
-# set-window-option -g window-status-separator ''
-# set -g status-right "$prefix $mode #[fg=#2ac3de]  #S-#I-#P $user"
-# set -g status-left ""
-# # set -g status-left "#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} $prefix"
-# set-option -g window-status-format "#[fg=#74787a] 󱫪 #W "
-# set-option -g window-status-current-format "#[fg=#f2c867]  #[fg=#afd787]#W "
+set -g status-position top
 
 ## Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+
+set -g @catppuccin_pane_active_border_style "fg=cyan" # Use a value compatible with the standard tmux 'pane-border-active-style'
+set -g @catppuccin_status_background "default"
+set -g @catppuccin_date_time_text "%Y-%m-%d"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory user host session cpu date_time"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Initialize TMUX plugin manager
 run '~/.config/tmux/plugins/tpm/tpm'
