--- a/tmux.conf
+++ b/tmux.conf
@@ -134,25 +134,32 @@ bind t if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 # =====================================
 # ===    Appearence and status bar  ===
 # ======================================
-set -g status-interval 2
-# set -g status-style "bg=#292e42"
-set -g status-style "bg=default"
+# set -g status-interval 2
+# # set -g status-style "bg=#292e42"
+# set -g status-style "bg=default"
+#
+# set -g status on
+# set -g status-justify left
+# # set -g status-position bottom
+# set -g status-position top
+#
+# set -g status-left-length 80
+# set -g status-right-length 80
+#
+# prefix="#{?client_prefix,🐠,}"
+# mode="#{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
+# user="#[fg=cyan]  #(whoami) "
+#
+# set-window-option -g window-status-separator ''
+# set -g status-right "$prefix $mode #[fg=#2ac3de]  #S-#I-#P $user"
+# set -g status-left ""
+# # set -g status-left "#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} $prefix"
+# set-option -g window-status-format "#[fg=#74787a] 󱫪 #W "
+# set-option -g window-status-current-format "#[fg=#f2c867]  #[fg=#afd787]#W "
 
-set -g status on
-set -g status-justify left
-# set -g status-position bottom
-set -g status-position top
+## Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
 
-set -g status-left-length 80
-set -g status-right-length 80
-
-prefix="#{?client_prefix,🐠,}"
-mode="#{?pane_in_mode,#[bg=#afd75f]#[fg=#262626] Copy Mode #[default],}"
-user="#[fg=cyan]  #(whoami) "
-
-set-window-option -g window-status-separator ''
-set -g status-right "$prefix $mode #[fg=#2ac3de]  #S-#I-#P $user"
-set -g status-left ""
-# set -g status-left "#[fg=#87d7ff]  #{s|$HOME|~|:pane_current_path} $prefix"
-set-option -g window-status-format "#[fg=#74787a] 󱫪 #W "
-set-option -g window-status-current-format "#[fg=#f2c867]  #[fg=#afd787]#W "
+# Initialize TMUX plugin manager
+run '~/.config/tmux/plugins/tpm/tpm'
